--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brandon Carl (http://www.brandoncarl.com/)",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "compilers": "^0.3.1"
   },
