--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Brandon Carl (http://www.brandoncarl.com/)",
   "license": "MIT",
   "dependencies": {
-    "compilers": "^1.0.0"
+    "compilers": "^1.0.2",
   },
   "repository": {
     "type": "git",
