--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "compilers": "^1.0.2",
+    "lodash.assign": "^4.0.4"
   },
   "repository": {
     "type": "git",
